fix selected menu link hover not visible + add bold on selected

--- a/themes/grav-theme-howto/css/style.css
+++ b/themes/grav-theme-howto/css/style.css
@@ -275,6 +275,11 @@ padding: 20px;
     color: var(--secondary-color);
 }
 
+.main-nav ul li.selected > a:hover{
+  font-weight: bold;
+}
+
+
 /* Dropdown CSS */
 .main-nav ul li {position: relative;}
 
@@ -357,8 +362,10 @@ padding: 20px;
   color: #b9a2ab;
 }
 
-ul#nav li a:hover { color: #FFFFFF; opacity: 1;}
-
+ul#nav li a:hover {
+  color: var(--secondary-color);
+  opacity: 1;
+}
 
 /* Volor bar */
 .body-top {
